building the script, one line at a time

--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
         <aside>
             <h4>Top Results</h4>
         </aside>
-        <section class="container">
+        <section id="container" class="container">
             <div class="qAndA">
-                this is a question
+                <p id="lineONE"></p>
+                <p id="lineTWO"></p>
+                <p id="lineTHREE"></p>
+                <p id="lienFOUR"></p>
+                <p id="lineFIVE"></p>
             </div>
             <div class="rightOrWrong">
-                this is wrong
             </div>
         </section>
     </main>
