bottons work ! YAYAgit add .

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p id="lineONE"></p>
                 <p id="lineTWO"></p>
                 <p id="lineTHREE"></p>
-                <p id="lienFOUR"></p>
+                <p id="lineFOUR"></p>
                 <p id="lineFIVE"></p>
             </div>
             <div class="rightOrWrong">
