--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </aside>
         <section id="container" class="container">
             <div class="qAndA">
-                <p id="lineONE"></p>
-                <p id="lineTWO"></p>
-                <p id="lineTHREE"></p>
-                <p id="lineFOUR"></p>
-                <p id="lineFIVE"></p>
+                <p id="lineONE" class="options" data-state="0"></p>
+                <p id="lineTWO" class="options" data-state="1"></p>
+                <p id="lineTHREE" class="options" data-state="2"></p>
+                <p id="lineFOUR" class="options" data-state="3"></p>
+                <p id="lineFIVE" class="options" data-state="4"></p>
             </div>
             <div class="rightOrWrong">
             </div>
