changes <P>s to <spans>

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <section id="container" class="container">
             <div class="qAndA">
                 <p id="lineONE" class="options" data-state="0"></p>
-                <p id="lineTWO" class="options" data-state="1"></p>
-                <p id="lineTHREE" class="options" data-state="2"></p>
-                <p id="lineFOUR" class="options" data-state="3"></p>
-                <p id="lineFIVE" class="options" data-state="4"></p>
+                <span id="lineTWO" class="options" data-state="1"></span>
+                <span id="lineTHREE" class="options" data-state="2"></span>
+                <span id="lineFOUR" class="options" data-state="3"></span>
+                <span id="lineFIVE" class="options" data-state="4"></span>
             </div>
             <div class="rightOrWrong">
             </div>
